Worldcam shows from the bottom after bpy.ops.view3d.object_as_camera() #38905

Closed
opened 2014-03-01 14:38:21 +01:00 by Reiner Prokein · 7 comments

System Information
Operating system and graphics card
Win 7, 64 Bit

Blender Version
Broken: (example: 2.69.7 4b206af, see splash screen)
Worked: (optional)

2.69 from 27-2-2014

Short description of error

I have a script that runs bpy.ops.view3d.object_as_camera() at a created camera. When i switch back to worldcamera, then the view shows the scene from the bottom. And does not go back to the view that it had before.

This happens for every new created camera. Once i have switched to world and back to camera then the view gets recognized.

Exact steps for others to reproduce the error
Based on a (as simple as possible) attached .blend file with minimum amount of steps

Load attached scene. It should contain the script. When not load it, it is also attached.
The scene view is by default a bit rotated. See step1.jpg

Switch to scripting panel. Run the script. Open the Toolshelf and click at the TrueIsocam button that is new there. You will find yourself in camera view. See step2.jpg

Now press Numpad 0 to return to worldview. The scene shows from the bottom now. See step3.jpg{F79348}

step1.jpg

step2.jpg

step3.jpg

camrotatebug.blend

**System Information** Operating system and graphics card Win 7, 64 Bit **Blender Version** Broken: (example: 2.69.7 4b206af, see splash screen) Worked: (optional) 2.69 from 27-2-2014 **Short description of error** I have a script that runs bpy.ops.view3d.object_as_camera() at a created camera. When i switch back to worldcamera, then the view shows the scene from the bottom. And does not go back to the view that it had before. This happens for every new created camera. Once i have switched to world and back to camera then the view gets recognized. **Exact steps for others to reproduce the error** Based on a (as simple as possible) attached .blend file with minimum amount of steps Load attached scene. It should contain the script. When not load it, it is also attached. The scene view is by default a bit rotated. See step1.jpg Switch to scripting panel. Run the script. Open the Toolshelf and click at the TrueIsocam button that is new there. You will find yourself in camera view. See step2.jpg Now press Numpad 0 to return to worldview. The scene shows from the bottom now. See step3.jpg{[F79348](https://archive.blender.org/developer/F79348/camrotatebug.py)} ![step1.jpg](https://archive.blender.org/developer/F79349/step1.jpg) ![step2.jpg](https://archive.blender.org/developer/F79350/step2.jpg) ![step3.jpg](https://archive.blender.org/developer/F79351/step3.jpg) [camrotatebug.blend](https://archive.blender.org/developer/F79352/camrotatebug.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @tiles

Added subscriber: @tiles
Campbell Barton self-assigned this 2014-03-01 15:39:13 +01:00

Added subscriber: @ThomasDinges

Added subscriber: @ThomasDinges

This issue was referenced by blender/blender-addons-contrib@cdaff06026

This issue was referenced by blender/blender-addons-contrib@cdaff060265ef81539d04f6ad1f16762dbbba288

This issue was referenced by cdaff06026

This issue was referenced by cdaff060265ef81539d04f6ad1f16762dbbba288

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit cdaff06026.

Closed by commit cdaff06026.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38905
No description provided.