Fix T38905: view3d.object_as_camera didn't store the last-view